Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13.2
-
None
-
fedora 33
-
-
8daa94431341afece6beb052e6224d215f8507b7 (qt/qtbase/dev) 2d32e38e3a4d8704f5543315382f3ea2803256a0 (qt/qtbase/6.1) 20e5aba3b9376c2b233ea595b56d0049d7bf9508 (qt/qtbase/5.12) 774f4542edb86373917b26ec6ce58bb574d1973a (qt/qtbase/6.0)
Description
qt_memrotate270, qt_memrotate180 segfault when trying to rotate images loaded from .tif file.
The following code segfaults
QApplication app(argc, argv);
QImageReader reader(argv[1]);
QImage image;
QPixmap pixmap;
QTransform transform;reader.setAutoTransform(false);
image = reader.read();
transform.rotate(90); // segfault at 90, 180, 270, okay if 89.99
image = image.transformed(transform);
pixmap.convertFromImage(image);
However, changing rotate to 89.99 works fine since it does not seem to call qt_memrotate270
#0 0x00007f523881e0a3 in qt_memrotate270(unsigned int const*, int, int, int, unsigned int*, int) () from /lib64/libQt5Gui.so.5
#1 0x00007f523867c5e5 in rotated90(QImage const&) () from /lib64/libQt5Gui.so.5
#2 0x00007f523867cc83 in QImage::transformed(QTransform const&, Qt::TransformationMode) const () from /lib64/libQt5Gui.so.5
#3 0x0000000000402381 in main (argc=2, argv=0x7ffe2b35ff18) at /home/robinson/Workspace/dsplib/core/src/ui/TiffViewerMain.cpp:19
#4 0x00007f52379f71e2 in __libc_start_main () from /lib64/libc.so.6
#5 0x000000000040217e in _start ()